--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "small_blog",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0 <19.0.0"
+  },
   "description": "",
   "main": "app.js",
   "type": "commonjs",
